--- a/app/views/tournaments/index.html.erb
+++ b/app/views/tournaments/index.html.erb
@@ -4,7 +4,7 @@
 
 <div class="title">トーナメント一覧</div>
   <p>
-    <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+    <button type="button" class="btn btn-warning" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
       検索オプション
     </button>
   </p>
@@ -48,7 +48,7 @@
           </div>
         </div>
         <div class="col-lg-12">
-          <%= fo.submit "検索する", class: "btn btn-primary btn-block my-3" %>
+          <%= fo.submit "検索する", class: "btn btn-secondary btn-block my-3" %>
         </div>
       </div>
     <% end %>
