--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,99 +24,25 @@
 	    <!--
 	      body {
 	        background-color: #223;
-	      }
-	      
-	      div.container-fluid,
-	      div.container {
 	        color: #fff;
 	      }
 	      
-	      div.modal-content {
+	      div.modal-content, select {
           background-color: #223;
+          color: #fff;
         }
-	      
-	      select {
-	        background-color: #223;
-	      }
-	      
-	      .form-control:valid {
+        
+        /* form-control */
+        .form-control:valid {
           background-color: #223!important;
           color: #fff;
         }
         
-        div.bootstrap-datetimepicker-widget.dropdown-menu.usetwentyfour {
-          background-color: #111;
-          color: #fff;
-          width: 240px;
-        }
-        
-        th {
+        .form-control:invalid {
+          background-color: rgba(255, 0, 0, 0.25)!important;
           color: #fff;
         }
-        
-        td {
-          color: #fff;
-        }
-        
-        .datepicker-days th.dow:first-child,
-        .datepicker-days td:first-child {
-            color: #f00;
-        }
-        .datepicker-days th.dow:last-child,
-        .datepicker-days td:last-child {
-            color: #00f;
-        }
-    
-        .bootstrap-datetimepicker-widget table td.active,
-        .bootstrap-datetimepicker-widget table td.active:hover {
-          background-color: #444;
-          color: #888;
-          text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-        }
-    
-        .bootstrap-datetimepicker-widget table td.day,
-        .bootstrap-datetimepicker-widget table td.day:hover,
-        .bootstrap-datetimepicker-widget table td.i.active, {
-          background-color: #400;
-          color: #888;
-          text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-        }
-        
-        .datepicker-days table tbody tr td.day.active {
-          color: #ccc;
-          background-color: #888;
-        }
-        
-        table.table thead tr th.prev:hover, 
-        table.table-condensed thead tr th.prev:hover,
-        table.table thead tr th.picker-switch:hover, 
-        table.table-condensed thead tr th.picker-switch:hover, 
-        table.table thead tr th.next:hover, 
-        table.table-condensed thead tr th.next:hover, 
-        table.table-condensed tbody tr td span:hover,
-        table.table-condensed tr td a span.fa:hover,
-        table.table-condensed tr td span:hover,
-        table.table-condensed tr td.hour:hover,
-        table.table-condensed tr td.minute:hover,
-        table.table-condensed tr td.second:hover,
-        .datepicker-days table tbody tr td.day:hover, 
-        .timepicker-picker table tbody tr td.span:hover {
-          background-color: #444;
-        }
-        
-        a.nav-link.text-reset.font-weight-bold.active,
-        #userpageDropdown[aria-expanded="true"],
-        div.card,
-        div.dropdown-menu.show {
-          background-color: #343A40;
-        }
-        
-        a.nav-link.drawer-menu-item,
-        a.dropdown-item,
-        a.dropdown-item.font-weight-bold {
-          color: #fff;
-        }
-	    
+
 	  </style>
   </head>
 
