--- a/app/views/messages/_search_inbox.html.erb
+++ b/app/views/messages/_search_inbox.html.erb
@@ -28,7 +28,7 @@
       <%= fo.text_field :text, class: "form-control" %>
     </div>
     <div class="col-12">
-      <%= fo.submit "検索する", class: "btn btn-primary btn-block my-2 mail_search" %>
+      <%= fo.submit "検索する", class: "btn btn-secondary btn-block my-2 mail_search" %>
     </div>
   </div>
   <%= fo.hidden_field :inbox, value: 'inbox_search' %>
