--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,14 +1,14 @@
-<% provide(:title, "Top") %>
+<% provide(:title, "トップ") %>
 
 <div class="center jumbotron" style="background-color:#22222a">
   <h1>スマブラ大会進行管理システム</h1>
   <p>大会進行に関する手続きをオンライン上で完結しましょう。</p>
   <% if logged_in? %>
-    <%= link_to "新しく大会を作る", new_tournament_path, class: "btn btn-lg btn-success" %>
-    <%= link_to "支度を整える", current_user, class: "btn btn-lg btn-primary" %>
+    <%= link_to "新しく大会を作る", new_tournament_path, class: "btn btn-lg btn-warning" %>
+    <%= link_to "支度を整える", current_user, class: "btn btn-lg btn-dark" %>
   <% else %>
-    <%= link_to "ユーザー登録", signup_path, class: "btn btn-lg btn-primary" %>
-    <%= link_to "ログイン", login_path, class: "btn btn-lg btn-primary" %>
+    <%= link_to "ユーザー登録", signup_path, class: "btn btn-lg btn-dark" %>
+    <%= link_to "ログイン", login_path, class: "btn btn-lg btn-dark" %>
   <% end %>
-  <%= link_to "俺より強い奴に会いに行く", tournaments_path, class: "btn btn-lg btn-primary" %>
+  <%= link_to "俺より強い奴に会いに行く", tournaments_path, class: "btn btn-lg btn-dark" %>
 </div>
