--- a/app/views/tournaments/_toggle.html.erb
+++ b/app/views/tournaments/_toggle.html.erb
@@ -1,7 +1,7 @@
 <% case @state %>
 <% when 'open' %>
   <div class="row justify-content-between m-1">
-    <span>現在開催中のマッチ</span><p><%= link_to "終了済", tournament_toggle_path(@tournament, :state => 'complete'), remote: true, class: "btn btn-primary" %></p>
+    <span>現在開催中のマッチ</span><p><%= link_to "終了済", tournament_toggle_path(@tournament, :state => 'complete'), remote: true, class: "btn btn-secondary" %></p>
   </div>
   <div class="d-none d-lg-block"><!-- 画面幅lg以上で表示 -->
     <% if !@matches_opening.blank? %>
@@ -20,7 +20,7 @@
           <% @matches_opening.each do |matches| %>
             <div class="col-6">
               <%= return_user_from_participant(matches["match"]["player1_id"]).name + " vs " + return_user_from_participant(matches["match"]["player2_id"]).name + "  " %>
-              <%= link_to "報告", tournament_report_path(@tournament, matches), remote: true, class: "btn btn-success mb-2" if master_or_party?(@tournament, matches["match"]["player1_id"], matches["match"]["player2_id"]) %>
+              <%= link_to "報告", tournament_report_path(@tournament, matches), remote: true, class: "btn btn-warning mb-2" if master_or_party?(@tournament, matches["match"]["player1_id"], matches["match"]["player2_id"]) %>
             </div>
           <% end %>
         <% else %>
@@ -31,14 +31,14 @@
   </div><!-- d-lg-none 画面幅lg未満で表示 -->
 <% when 'complete' %>
   <div class="row justify-content-between m-1">
-    <span>終了済のマッチ</span><p><%= link_to "開催中", tournament_toggle_path(@tournament, :state => 'open'), remote: true, class: "btn btn-primary" %></p>
+    <span>終了済のマッチ</span><p><%= link_to "開催中", tournament_toggle_path(@tournament, :state => 'open'), remote: true, class: "btn btn-secondary" %></p>
   </div>
   <div class="d-none d-lg-block"><!-- 画面幅lg以上で表示 -->
     <% if !@matches_complete.blank? %>
       <% @matches_complete.each do |matches| %>
         <%= return_user_from_participant(matches["match"]["player1_id"]).name + " vs " + return_user_from_participant(matches["match"]["player2_id"]).name + "  " %>
         <% unless @challonge["tournament"]["state"] == "complete" %>
-          <%= link_to "やり直し", tournament_reset_match_path(@tournament, matches), method: :get, data: { confirm: "やり直しをしてもいいですか？" }, class: "btn btn-primary mb-2" if master?(@tournament) %>
+          <%= link_to "やり直し", tournament_reset_match_path(@tournament, matches), method: :get, data: { confirm: "やり直しをしてもいいですか？" }, class: "btn btn-danger mb-2" if master?(@tournament) %>
         <% end %>
         <br>
       <% end %>
@@ -54,7 +54,7 @@
             <div class="col-6">
               <%= return_user_from_participant(matches["match"]["player1_id"]).name + " vs " + return_user_from_participant(matches["match"]["player2_id"]).name + "  " %>
               <% unless @challonge["tournament"]["state"] == "complete" %>
-                <%= link_to "やり直し", tournament_reset_match_path(@tournament, matches), method: :get, data: { confirm: "やり直しをしてもいいですか？" }, class: "btn btn-primary mb-2" if master?(@tournament) %>
+                <%= link_to "やり直し", tournament_reset_match_path(@tournament, matches), method: :get, data: { confirm: "やり直しをしてもいいですか？" }, class: "btn btn-danger mb-2" if master?(@tournament) %>
               <% end %>
             </div>
           <% end %>
