--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,8 +4,8 @@
 
 <% if @user == current_user %>
 <div class="row justify-content-around mb-3">
-  <%= link_to "新しく大会を作る", new_tournament_path, class: "btn btn-success" %>
-  <%= link_to "俺より強い奴に会いに行く", tournaments_path, class: "btn btn-primary" %>
+  <%= link_to "新しく大会を作る", new_tournament_path, class: "btn btn-warning" %>
+  <%= link_to "俺より強い奴に会いに行く", tournaments_path, class: "btn btn-secondary" %>
 </div>
 <% end %>
 <!-- ピル部分 -->
@@ -119,7 +119,7 @@
                     <%= f.text_area :text, class: "form-control" %>
                   </div>
                   <div class="col-12">
-                    <%= f.submit "メッセージを送信する", class: "btn btn-primary btn-block btn-login" %>
+                    <%= f.submit "メッセージを送信する", class: "btn btn-secondary btn-block btn-login" %>
                   </div>
                 </div>
               <% end %>
@@ -156,7 +156,7 @@
                     <%= fo.text_field :text, class: "form-control" %>
                   </div>
                   <div class="col-12">
-                    <%= fo.submit "検索する", class: "btn btn-primary btn-block my-2 mail_search" %>
+                    <%= fo.submit "検索する", class: "btn btn-secondary btn-block my-2 mail_search" %>
                   </div>
                 </div>
                 <%= fo.hidden_field :outbox, value: 'outbox_search' %>
@@ -176,7 +176,7 @@
               <%= f.label "本文" %>
               <%= f.text_area :text, class: "form-control" %>
               
-              <%= f.submit "メッセージを送信する", class: "btn btn-primary btn-block btn-login" %>
+              <%= f.submit "メッセージを送信する", class: "btn btn-secondary btn-block btn-login" %>
             <% end %>
           </div>
         </div>
@@ -184,7 +184,7 @@
   </div><!-- tabs-contact -->
   <div class="tab-pane fade" id="tabs-result" role="tabpanel" aria-labelledby="tabs-result-tab">
     <p class="my-2">
-      <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+      <button type="button" class="btn btn-warning" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
         検索オプション
       </button>
     </p>
@@ -228,7 +228,7 @@
             </div>
           </div>
           <div class="col-lg-12">
-            <%= fo.submit "検索する", class: "btn btn-primary btn-block my-3" %>
+            <%= fo.submit "検索する", class: "btn btn-secondary btn-block my-3" %>
           </div>
         </div>
       <% end %>
@@ -306,6 +306,18 @@ $(function(){
   $('.datepicker').datetimepicker({
     format: 'YYYY-MM-DD HH:mm:00'
   });
+  
+  
+  var name_count = $("#user_name").text().length;
+  //残りの入力できる文字数を計算
+  var now_name_count = 20 - name_count;
+  //文字数がオーバーしていたら文字色を赤にする
+  if (name_count > 20) {
+    $("#user_name_count").css("color","red");
+  }
+  //残りの入力できる文字数を表示
+  $("#user_name_count").text( "残り" + now_name_count + "文字");
+  
 });
 
 </script>
